<resources>
    <string name="app_name">Announcer</string>
    <string name="line_name">路线名称</string>
    <string name="up_stations">上行站点序列</string>
    <string name="down_stations">下行站点序列</string>
    <string name="down_stations_helper">填入站点id，以空格分隔</string>
    <string name="line_type">路线类型(C社区|B公交|U地铁|T火车)</string>


    <string name="main_line_0">-</string>
    <string name="main_staring_station_name">MicroBus</string>
    <string name="main_terminal_name">欢迎您</string>
    <string name="to">开往</string>
    <string name="main_to_station_name">-</string>
    <string name="next">下一站</string>
    <string name="will_arrive">即将到站</string>
    <string name="arrive">到站</string>
    <string name="main_next_station_name">-</string>
    <string name="main_distance_title">距离</string>
    <string name="main_distance_unit">(m)</string>
    <string name="main_distance_value">-</string>
    <string name="main_speed_title">速度</string>
    <string name="main_speed_unit">(kmh)</string>
    <string name="main_speed_value">-</string>
    <string name="switch_location">定位</string>
    <string name="switch_follow_location">跟随</string>
    <string name="switch_map">地图</string>
    <string name="up_line">上行</string>
    <string name="down_line">下行</string>
    <string name="starting_station">起点站</string>
    <string name="last_station">上一站</string>
    <string name="announce_current_station">报本站</string>
    <string name="next_station">下一站</string>
    <string name="terminal">终点站</string>
    <string name="now_location">当前位置</string>
    <string name="running_info">运行信息</string>
    <string name="header_wel_left">MicroBus</string>
    <string name="header_wel_right">欢迎您</string>
    <string name="header_speed">速度 Speed</string>
    <string name="switch_line">切换路线</string>
    <string name="plan_line_too_short_tip">路径过短，建议重新规划</string>
    <string name="search_by_category">分类查找</string>
    <string name="out_line_running">回厂</string>
    <string name="station_not_enough_tip">请先添加至少2个站点</string>

    <string name="operation_lock_on_tip">操作锁定已开启\n请长按定位按钮解锁</string>
    <string name="operation_lock_switch_to_on_tip">已开启操作锁定</string>
    <string name="operation_lock_switch_to_off_tip">已开启解除锁定</string>

    <string name="request_manage_files_access_permission_title">允许 Announcer 访问设备上的文件吗？</string>
    <string name="request_manage_files_access_permission_text">应用需要该权限来读取报站语音资源</string>
    <string name="request_manage_files_access_permission_to_grant">前往授予</string>

    <string name="total_line">全部路线</string>
    <string name="line_normal_bus">公交路线 (B)</string>
    <string name="line_comm_bus">社区路线 (C)</string>
    <string name="line_metro">地铁路线 (U)</string>
    <string name="line_train">火车路线 (T)</string>
    <string name="line_other">其他路线</string>
    <string name="line_all">全站路线</string>

    <string name="km">(km)</string>
    <string name="m">(m)</string>

    <string name="up_and_down_invert">上下行站点对称</string>
    <string name="set_default_line">设为默认路线</string>
    <string name="input_line_name">搜索要运行的路线</string>
    <string name="cn_name">中文名称</string>
    <string name="en_name">英文名称</string>
    <string name="station_type">站点类型(C社区|B公交|U地铁|T火车)</string>
    <string name="station_longitude">站点经度</string>
    <string name="station_latitude">站点纬度</string>
    <string name="station_location_tip">* Announcer 记录位置使用的格式为 GCJ02 坐标系（火星坐标系），请注意区分</string>
    <string name="get_current_location">获取当前位置</string>
    <string name="nav_main">主控</string>
    <string name="nav_line">路线</string>
    <string name="nav_station">站点</string>
    <string name="nav_setting">设置</string>
    <string name="add_line">添加路线</string>
    <string name="add_station">添加站点</string>
    <string name="station_id_value">000</string>
    <string name="station_type_value">B</string>
    <string name="station_cn_name_value">站点</string>
    <string name="station_en_name_value">Station</string>
    <string name="station_longitude_value">0.0</string>
    <string name="station_latitude_value">0.0</string>
    <string name="station_index_value">00</string>
    <string name="station_name">站点</string>
    <string name="search">搜索</string>
    <string name="set_temporary_line_name">设置临时路线名称</string>

    <string name="press_again_exit_app">再按一次退出应用</string>

    <string name="search_station_not_have_voice_finish">已将缺失音频的站点复制到剪切板</string>
    <string name="xPixelPerSecond">%1$d 像素/秒</string>
    <string name="online_search">在线搜索</string>
    <string name="setAsLineName">设路线名</string>
    <string name="stationTypeDefault">B</string>

    <string name="SysAndEs">系统与电显</string>
    <string name="Announcement">语音与播报</string>
    <string name="MapAndLocation">定位与地图</string>
    <string name="DateAndAbout">数据与关于</string>

    <string name="system">系统</string>
    <string name="es">电显</string>

    <string name="voice_broadcast">语音播报</string>
    <string name="announcement_library">语音库</string>
    <string name="anFormat">播报格式</string>

    <string name="location">定位</string>
    <string name="map">地图</string>

    <string name="stationAndLineDate">站点与路线数据</string>
    <string name="about_an">关于 Announcer</string>
    <string name="about">关于</string>

    <string name="lineNameDefault">K99</string>
    <string name="SAndTText">起点站 - 终点站</string>
    <string name="lineTypeDefault">B</string>
    <string name="split">|</string>
    <string name="S2T">%1$s - %2$s</string>
    <string name="currentRange">当前半径</string>
    <string name="locationPerSecond">每 %1$d 毫秒定位一次</string>
    <string name="autoAnPerSecond">每次报站间隔 %1$d 秒</string>
    <string name="volumeBoostAmountMdB">音量增强: %1$d mdB</string>
    <string name="loading">正在加载</string>
    <string name="now_search">正在搜索 %1$s 路线%2$s</string>
    <string name="title_activity_low_power_main_fragment">LowPowerMainFragment</string>
    <string name="isRingRoute">是否为环线</string>
    <string name="title_activity_line_switcher">LineSwitcherActivity</string>

</resources>