<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/lineCard"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="12dp"
    android:layout_marginEnd="12dp"
    android:layout_marginBottom="8dp"
    android:clickable="true"
    android:focusable="true"
    android:foreground="?attr/selectableItemBackground"
    app:cardBackgroundColor="@color/an_contain_bg"
    app:cardCornerRadius="24dp"
    app:strokeWidth="0dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="4dp">

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/line_name_card"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:background="@color/md_theme_surface"
            app:cornerRadius="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:strokeWidth="0dp">

            <TextView
                android:id="@+id/line_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="6dp"
                android:text="@string/main_line_0"
                android:textColor="?attr/colorPrimary"
                android:textSize="@dimen/largeFontSize"
                android:textStyle="bold" />

        </com.google.android.material.card.MaterialCardView>


        <com.microbus.announcer.view.ScrollingTextView
            android:id="@+id/lineStartingStation"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:ellipsize="marquee"
            android:gravity="center"
            android:marqueeRepeatLimit="marquee_forever"
            android:paddingStart="8dp"
            android:paddingEnd="4dp"
            android:singleLine="true"
            android:text="@string/main_staring_station_name"
            android:textColor="?attr/colorPrimary"
            android:textSize="@dimen/largeFontSize"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/line_name_card"
            app:layout_constraintEnd_toStartOf="@+id/line_name_card"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.microbus.announcer.view.ScrollingTextView
            android:id="@+id/lineTerminal"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:ellipsize="marquee"
            android:gravity="center"
            android:marqueeRepeatLimit="marquee_forever"
            android:paddingStart="8dp"
            android:paddingEnd="4dp"
            android:singleLine="true"
            android:text="@string/main_terminal_name"
            android:textColor="?attr/colorPrimary"
            android:textSize="@dimen/largeFontSize"
            app:layout_constraintBottom_toBottomOf="@+id/line_name_card"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/line_name_card"
            app:layout_constraintTop_toTopOf="parent" />

        <com.microbus.announcer.view.NestedScrollableHost
            android:id="@+id/lineStationListHost"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/line_name_card"
            app:sameDirectionWithParent="true">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/lineStationList"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fadingEdgeLength="20dp"
                android:requiresFadingEdge="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/line_name_card" />

        </com.microbus.announcer.view.NestedScrollableHost>


        <!--                <com.microbus.announcer.view.Container-->
        <!--                    android:id="@+id/lineStationListContainer"-->
        <!--                    android:layout_width="wrap_content"-->
        <!--                    android:layout_height="wrap_content"-->
        <!--                    app:layout_constraintBottom_toBottomOf="parent"-->
        <!--                    app:layout_constraintEnd_toEndOf="parent"-->
        <!--                    app:layout_constraintStart_toStartOf="parent"-->
        <!--                    app:layout_constraintTop_toBottomOf="@+id/line_name">-->
        <!--                    -->
        <!--                    -->
        <!--                </com.microbus.announcer.view.Container>-->


    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.card.MaterialCardView>